# eros

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
example/: config.toml  test.txt
src/: lib.rs  main.rs  proxy.rs
src/bpf/: assign.bpf.c  dispatch.rs  minimal.bpf.c
src/config/: config.rs
src/lb/: lbalancer.rs  mod.rs
