[package]
name = "eros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.1"
serde = { version = "1.0.152", features = ["derive"] }
notify = "5.1.0"
libbpf-rs = "0.20"
tokio = { version = "1", features = ["rt", "net"] }
